<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_col"
    android:orientation="vertical"
    tools:context=".PollSetUpFragment"

    >

    <EditText
        android:id="@+id/Title"
        style="@style/MajorInputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:hint="@string/title"
        android:imeOptions="actionDone"
        android:maxLines="1" />

    <include layout="@layout/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/InputLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/number_of_participants" />

        <EditText
            android:id="@+id/participantNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:digits="0123456789"
            android:inputType="number"
            android:text="10"
            android:textAlignment="center"
            style="@style/optionStyle"
            />
    </LinearLayout>

    <include layout="@layout/divider" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/InputLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/method" />

        <TextView
            android:id="@+id/method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            style="@style/optionStyle" />
    </LinearLayout>

    <include layout="@layout/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/InputLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ballot_type" />

        <TextView
            android:id="@+id/BallotType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            style="@style/optionStyle"/>
    </LinearLayout>

    <include layout="@layout/divider" />

    <TextView
        style="@style/InputLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textAlignment="center" />

    <include layout="@layout/divider" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:fontFamily="@font/lato_bold"
        android:paddingHorizontal="20dp"
        android:textColor="@color/black"
        android:textSize="16dp" />

    <TextView
        style="@style/InputLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/options"
        android:textAlignment="center" />

    <include layout="@layout/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <EditText
            android:id="@+id/Option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/input_an_option"
            android:imeOptions="actionDone"
            android:maxLines="1"
            style="@style/MajorInputStyle"/>
        <ImageButton
            android:id="@+id/AddOptionBtn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/icon_add"
            android:background="@null"/>
    </LinearLayout>
    <include layout="@layout/divider" />

    <ScrollView
        android:layout_marginVertical="15dp"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_height="300dp"
        android:layout_weight="1"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/OptionsMenu"
            />

    </ScrollView>
    <include layout="@layout/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="5dp"
        >
        <TextView
            style="@style/InputLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/participate" />
        <View
            android:id="@+id/participateBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/check_box"

            />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/finish"
        android:layout_width="200dp"
        android:layout_height="80dp"
        style="@style/btnStyle"
        android:layout_gravity="center"
        android:text="@string/finish"
        android:layout_marginBottom="10dp"
        />
</LinearLayout>